--- a/Index.html
+++ b/Index.html
@@ -22,7 +22,7 @@
             <img src="prasu.jpg" alt="Prasurjya"/>
             <div class="prasu">
                 <h3>Prasurjya Gogoi</h3>
-                <p class="prasu" ><h4>Rich:</h4>Having a lot of money.</br><h4>Success:</h4>Achieving things that you have aimmed for.</p> 
+                <p class="prasu" ><h4>Rich:</h4>Having a lot of money.</br><h4>Success:</h4>Achieving things that you have aimed for.</p> 
             </div>
         </div>
       </div>
